--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: serif;
 }
 
 body{
-    background-image:linear-gradient(rgba(0,0,0,0),rgba(252, 247, 247, 0.527)),url(/bg1.jpg);
+    background-image:linear-gradient(rgba(104, 92, 92, 0),rgba(110, 88, 88, 0)),url(/bg.jpg);
    /* background-color: #f3f5f9; */
    background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .wrapper{
@@ -23,13 +24,13 @@ body{
 .wrapper .sidebar{
   width: 200px;
   height: 100%;
-  background:lightgrey;
+  background-color: transparent;
   padding: 30px 0px;
   position: fixed;
 }
 
 .wrapper .sidebar h2{
-  color: #0946b8;
+  color:white;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 30px;
@@ -46,7 +47,7 @@ body{
 }    
 
 .wrapper .sidebar ul li a{
-  color: #2609b8;
+  color:white;
   display: block;
   margin-top: 25%;
 }
@@ -56,7 +57,7 @@ body{
 }
 
 .wrapper .sidebar ul li:hover{
-  background-color: #594f8d;
+  background-color: #84c5df;
 }
     
 .wrapper .sidebar ul li:hover a{
