--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 
 #bor{
     border: 2px solid black;
-    background-image:linear-gradient(rgba(104, 92, 92, 0),rgba(110, 88, 88, 0)),url(/plain.jpg);
+    background-image:linear-gradient(rgba(104, 92, 92, 0),rgba(110, 88, 88, 0)),url(plain.jpg);
    /* background-color: #f3f5f9; */
    background-position: center;
     background-size: cover;
