--- a/style.css
+++ b/style.css
@@ -12,18 +12,17 @@
   margin-left: auto;
   margin-right: auto;
 }
-
+/* 
 #bor{
   border: 2px solid transparent;
-  
-}
+} */
 
 body{
     background-image:linear-gradient(rgba(104, 92, 92, 0),rgba(110, 88, 88, 0)),url(bg.jpg);
    /* background-color: #f3f5f9; */
    background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 }
 
 .wrapper{
